--- a/app/src/main/res/Layouts/search/layout/food_detail.xml
+++ b/app/src/main/res/Layouts/search/layout/food_detail.xml
@@ -19,7 +19,7 @@
             android:background="@color/theme_color_deep"
             app:title="豆汁详情"
             app:titleTextColor="@color/white"
-            app:titleMarginStart="150dp">
+            app:titleMarginStart="165dp">
         </android.support.v7.widget.Toolbar>
 
 
@@ -32,6 +32,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
                 <ImageView
@@ -47,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="30dp"
                 android:textSize="21sp"
                 android:text="豆汁"/>
 
@@ -81,11 +82,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="90dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical">
                 <TextView
@@ -93,6 +96,7 @@
                     android:layout_height="wrap_content"
                     android:text="225"
                     android:id="@+id/food_d_kcal"
+                    android:layout_gravity="center_horizontal"
                     android:textSize="30sp">
                 </TextView>
 
@@ -101,13 +105,14 @@
                     android:layout_height="wrap_content"
                     android:text="@string/detail_kcal"
                     android:textSize="15sp"
-                    android:layout_gravity="center"></TextView>
+                    android:layout_gravity="center_horizontal"></TextView>
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical">
                 <TextView
@@ -115,6 +120,7 @@
                     android:layout_height="wrap_content"
                     android:text="225"
                     android:id="@+id/food_d_ts"
+                    android:layout_gravity="center_horizontal"
                     android:textSize="30sp">
                 </TextView>
 
@@ -123,13 +129,14 @@
                     android:layout_height="wrap_content"
                     android:text="@string/detail_cw"
                     android:textSize="15sp"
-                    android:layout_gravity="center"></TextView>
+                    android:layout_gravity="center_horizontal"></TextView>
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical">
                 <TextView
@@ -137,6 +144,7 @@
                     android:layout_height="wrap_content"
                     android:text="225"
                     android:id="@+id/food_d_dbz"
+                    android:layout_gravity="center_horizontal"
                     android:textSize="30sp">
                 </TextView>
 
@@ -145,13 +153,14 @@
                     android:layout_height="wrap_content"
                     android:text="@string/detail_pro"
                     android:textSize="15sp"
-                    android:layout_gravity="center"></TextView>
+                    android:layout_gravity="center_horizontal"></TextView>
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical">
                 <TextView
@@ -159,6 +168,7 @@
                     android:layout_height="wrap_content"
                     android:text="225"
                     android:id="@+id/food_d_fat"
+                    android:layout_gravity="center_horizontal"
                     android:textSize="30sp">
                 </TextView>
 
@@ -167,7 +177,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/detail_fat"
                     android:textSize="15sp"
-                    android:layout_gravity="center"></TextView>
+                    android:layout_gravity="center_horizontal"></TextView>
             </LinearLayout>
 
 
