--- a/app/src/main/res/Layouts/comm/layout/item_comm_part.xml
+++ b/app/src/main/res/Layouts/comm/layout/item_comm_part.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginTop="10dp"
+    android:background="@drawable/line">
 
     <ImageView
         android:layout_width="200dp"
