--- a/app/src/main/res/Layouts/search/layout/recipe_type_list.xml
+++ b/app/src/main/res/Layouts/search/layout/recipe_type_list.xml
@@ -8,11 +8,11 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="70dp"
         android:background="@color/theme_color_deep"
         app:title="@string/classified_recipe"
         app:titleTextColor="@color/white"
-        app:titleMarginStart="150dp">
+        app:titleMarginStart="165dp">
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
@@ -27,7 +27,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
             android:text="@string/menu_kind"
-            android:textSize="30sp"/>
+            android:textSize="25sp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -56,6 +56,7 @@
             </ImageView>
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -64,14 +65,23 @@
 
             <ImageView
                 android:id="@+id/recipe_type_3"
-                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:scaleX="0.9"
                 android:scaleY="0.9"
                 android:src="@drawable/recipe_bf">
             </ImageView>
 
-
+            <ImageView
+                android:id="@+id/recipe_type_4"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:scaleX="0.9"
+                android:scaleY="0.9"
+                android:src="@drawable/recipe_bf">
+            </ImageView>
 
         </LinearLayout>
     </LinearLayout>
