--- a/app/src/main/res/Layouts/user/layout/login.xml
+++ b/app/src/main/res/Layouts/user/layout/login.xml
@@ -10,11 +10,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/top_toolbar"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:background="@color/theme_color_deep"
     app:title="登陆"
     app:titleTextColor="@color/white"
-    app:titleMarginStart="150dp">
+    app:titleMarginStart="185dp">
 
     </android.support.v7.widget.Toolbar>
 
