--- a/app/src/main/res/Layouts/user/layout/user_part.xml
+++ b/app/src/main/res/Layouts/user/layout/user_part.xml
@@ -7,11 +7,18 @@
     android:background="@color/white">
 
     <!--我的课程-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:tag="实线"
+        android:layout_marginTop="10dp"
+        android:background="@color/font_gray" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bt_myClass">
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -33,12 +40,12 @@
             android:src="@drawable/ic_right_b" />
 
     </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:tag="实线"
-        android:layout_marginTop="10dp"
-        android:background="@color/font_gray" />
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="2dp"-->
+        <!--android:tag="实线"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:background="@color/font_gray" />-->
 
     <!--我的饮食-->
 
