--- a/app/src/main/res/Layouts/search/layout/item_recipe.xml
+++ b/app/src/main/res/Layouts/search/layout/item_recipe.xml
@@ -3,36 +3,43 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:paddingBottom="15dp">
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="vertical"-->
+            <!--android:gravity="center">-->
 
             <ImageView
                 android:id="@+id/food_photo"
+                android:layout_gravity="center"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
+                android:layout_width="380dp"
                 android:scaleY="0.8"
-                android:src="@drawable/health_food_1"></ImageView>
-        </LinearLayout>
+                android:src="@drawable/health_food_1">
+
+            </ImageView>
+        <!--</LinearLayout>-->
 
     <LinearLayout
         android:id="@+id/food"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingRight="20dp">
 
         <TextView
+            android:paddingTop="11dp"
+            android:layout_marginLeft="25dp"
             android:id="@+id/food_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="鲜果牛奶果酸乳"
-            android:textSize="20dp"></TextView>
+            android:textSize="24dp"></TextView>
 
         <!--<ImageView-->
             <!--android:id="@+id/like_icon"-->
