--- a/app/src/main/res/Layouts/search/layout/recipe_detail.xml
+++ b/app/src/main/res/Layouts/search/layout/recipe_detail.xml
@@ -24,16 +24,15 @@
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/recipe_d_pic"
-                android:layout_width="wrap_content"
-                android:layout_height="283dp"
-                android:scaleX="1.6"
-                android:scaleY="1.3"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
                 android:src="@drawable/health_food_1" />
 
             <TextView
@@ -176,12 +175,12 @@
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="食材"
-                android:textSize="25sp"
-                android:layout_marginLeft="35dp"></TextView>
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="食材"-->
+                <!--android:textSize="25sp"-->
+                <!--android:layout_marginLeft="35dp"></TextView>-->
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/lv_2"
