--- a/app/src/main/res/Layouts/sport/layout/act_class_main.xml
+++ b/app/src/main/res/Layouts/sport/layout/act_class_main.xml
@@ -132,6 +132,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
             android:textSize="15sp"
             android:id="@+id/class_detail_detail"
             android:text="正在加载。。。"/>
