--- a/app/src/main/res/Layouts/user/layout/login.xml
+++ b/app/src/main/res/Layouts/user/layout/login.xml
@@ -6,39 +6,59 @@
     android:gravity="center_horizontal">
 
     <android.support.v7.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/top_toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:background="@color/theme_color_deep"
-    app:title="登陆"
-    app:titleTextColor="@color/white"
-    app:titleMarginStart="185dp">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/top_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@color/theme_color_deep"
+        app:title="账号登陆"
+        app:titleTextColor="@color/white"
+        app:titleMarginStart="150dp">
 
     </android.support.v7.widget.Toolbar>
 
+    <!--输入账号-->
     <EditText
         android:layout_marginTop="50dp"
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:textSize="23sp"
         android:hint="输入账号"
+        android:background="@android:color/transparent"
         android:id="@+id/login_un"/>
 
+    <View
+        android:layout_width="350dp"
+        android:layout_height="2dp"
+        android:tag="实线"
+        android:layout_marginTop="10dp"
+        android:background="@color/font_gray" />
+
+    <!--输入密码-->
     <EditText
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:textSize="23sp"
         android:hint="输入密码"
+        android:background="@android:color/transparent"
         android:layout_marginTop="20dp"
         android:id="@+id/login_pw"/>
+
+    <View
+        android:layout_width="350dp"
+        android:layout_height="2dp"
+        android:tag="实线"
+        android:layout_marginTop="10dp"
+        android:background="@color/font_gray" />
 
     <Button
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginTop="25dp"
         android:text="立即登录"
+        android:textColor="@color/bg_white"
+        android:background="@drawable/btn_normal_mine"
         android:id="@+id/bt_login"/>
 
     <TextView
