--- a/app/src/main/res/Layouts/user/layout/user_part.xml
+++ b/app/src/main/res/Layouts/user/layout/user_part.xml
@@ -7,12 +7,12 @@
     android:background="@color/white">
 
     <!--我的课程-->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:tag="实线"
-        android:layout_marginTop="10dp"
-        android:background="@color/font_gray" />
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="2dp"-->
+        <!--android:tag="实线"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:background="@color/font_gray" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
